@startuml
'––––––––– Layout & stil –––––––––
skinparam classAttributeIconSize 0
hide empty members

'––––––––– Paket –––––––––
package controller {
    class GameController
}

package model {
    class Board
    enum  Direction
    class GameState
    class Tile
}

package view {
    class GameView
    class TileView
}

package util {
    class HighScoreManager

}

class Main

' Externa Swing-klasser (för arvs-/assoc-pilar)
class JFrame
class JPanel
class JComponent
interface KeyListener
interface Serielizable


' Enkel strategi-interface för att kunna visa «Realization»


'––––––––– Relationer med *korrekta* UML-pilar –––––––––
'
'  ▸ Composition        *--
'  ▸ Aggregation        o--
'  ▸ Association        --
'  ▸ Directed Assoc.    -->
'  ▸ Dependency / Usage ..>
'  ▸ Generalization     --|>
'  ▸ Realization        ..|>

'— Model

Board         -->  Direction             : directed assoc.
Tile          ..|> Serielizable         : realization
GameState    ..|> Serielizable         : realization
Board         "1" *-- "0..16" Tile   : composition




'— Controller
GameController "1" -->  "1"  Board
GameController "1" -->  "1"  GameView
GameController "1" -->  "1"  HighScoreManager

GameController      ..|>      KeyListener             : realization
GameController "1" --  "1"  JFrame                   : association (håller referens)

'— View
GameView  "1" o-- "0..16" TileView                   : aggregation
GameView       --|> JPanel                           : generalization
TileView       --|> JComponent                       : generalization

'— Undo & Save/Load
MoveCommand "1" *-- "1" Board                        : composition
GameState   "1" *-- "1" Board                        : composition
GameState   "1" *-- "*" MoveCommand                  : composition

'— Strategy-exempel


'— Startklass
Main        ..>  GameController                      : dependency
Main        ..>  Board                               : dependency
Main        ..>  GameView                            : dependency
Main        ..>  HighScoreManager                    : dependency
Main        ..>  JFrame                              : dependency
@enduml
